# CPP_Learning

./: .gitmodules
AbstractClassesAsInterface/: Animal.cpp  Animal.h  Mammal.cpp  Mammal.h  Readme.md  Reptile.cpp  Reptile.h  StreamInsertable.cpp  StreamInsertable.h  main.cpp
AssignmentMyString/: String.cpp  String.h  main.cpp
CMStarter/: CMakeLists.txt  main.cpp
CMStarter/lib/: CMakeLists.txt
CMStarter/lib/FlexContainer/: CMakeLists.txt  FlexContainer.cpp  FlexContainer.h
CMakeBase/: CMakeLists.txt  tutorial.cxx
CMakeBase/lib/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
CPP20Concepts/: assignment11.h  combining-concepts.h  custom_concepts.h  main.cpp  requires-clause.h  std_concepts.h
CPP20_Coroutines/: premake5.lua
CPP20_Coroutines_ExtLibs/: CustomActions.lua  premake5.lua
CPP20_Modules_01/: CustomOptions.lua  premake5.lua
CPP20_Modules_02/: BoxContainer.ixx  CPP20_Modules_02.sln  CPP20_Modules_02.vcxproj  CPP20_Modules_02.vcxproj.filters  Line.ixx  ModulePartitions.ixx  ModulePartitionsA.ixx  ModulePartitionsB.ixx  Point.ixx  Readme.md  SubModuleA.ixx  SubModuleB.ixx  SubModuleTop.ixx  main.cpp
CPP20_Modules_L01/: CPP20_Modules_L01.sln  CPP20_Modules_L01.vcxproj  CPP20_Modules_L01.vcxproj.filters  Readme.md  main.cpp  math.ixx  modNumFour.ixx  modNumFour_impl_Point.cpp  modNumFour_impl_helpers.cpp  modNumThree.ixx  modNumThree_impl.cpp  modNumTwo.ixx
CPPClassTemplates/: dependencies.lua  premake5.lua
CPPClasses/: Box.cpp  Box.h  Cylinder.h  Dog.cpp  Dog.h  DogTwo.h  ExStruct.h  ExStructBinding.h  Point.h  Sphere.h  constants.h  main.cpp
CalcSampleApp/: main.cpp
ConstructorDeepDive/: ArrBehaviors.h  Box.h  CopyConstructor.h  Cylinder.cpp  Cylinder.h  DesignatedInit.h  InitListConstructor.h  MoveContructor.h  Reverser.h  Square.h  main.cpp
CustomIterators_CPP20/: LessonNotes.md
CustomIterators_CPP20_Bidirectional/: premake5.lua
CustomIterators_CPP20_RandomAccess/: Readme.md
CustomUnhandledExceptionTermination/: main.cpp
(+462 files in other folders)
